<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/client_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
                android:text="@string/abc_action_bar_home_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/client_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:text="@string/abc_action_bar_home_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/client_checkin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <EditText
            android:text="@string/abc_action_bar_home_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/client_checkout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:hint="@string/client_checkout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/spCheckOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/client_assets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/asset_usb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:text="@string/asset_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:text="@string/asset_cardreader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/client_security"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:text="@string/asset_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spSecurityDeposit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />


    </LinearLayout>
    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/client_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/client_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/client_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>
</LinearLayout>